# PySliceKit

./: .buildinfo  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  api.html  changelog.html  faq.html  genindex.html  getting_started.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  user_guide.html
.doctrees/: api.doctree  changelog.doctree  environment.pickle  faq.doctree  getting_started.doctree  index.doctree  user_guide.doctree
.github/workflows/: docs.yml  test.yml
_modules/: index.html
_modules/pyslicekit/: api.html  exceptions.html  exporter.html  types.html
_sources/: changelog.rst.txt  faq.rst.txt  index.rst.txt
_static/: california_housing_audit.json  dark_theme.css
docs/source/: api.rst  changelog.rst  conf.py  getting_started.rst  index.rst  user_guide.rst
docs/source/_static/: california_housing_audit.csv
docs/source/_templates/: layout.html
examples/: example.ipynb
pyslicekit/: __init__.py  api.py  exceptions.py  exporter.py  renderer.py  slicer.py  stats.py  types.py  validators.py
tests/: test_api.py  test_pyslicekit.py
