[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyslicekit"
version = "0.1.0"
description = "A library for discovering underperforming segments in machine learning models."
readme = "README.md"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "scipy",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME_HERE/PySliceKit"
Documentation = "https://YOUR_USERNAME_HERE.github.io/PySliceKit"
Repository = "https://github.com/YOUR_USERNAME_HERE/PySliceKit.git"
Issues = "https://github.com/YOUR_USERNAME_HERE/PySliceKit/issues"
Changelog = "https://github.com/YOUR_USERNAME_HERE/PySliceKit/blob/main/CHANGELOG.md"
"Discussion Board" = "https://github.com/YOUR_USERNAME_HERE/PySliceKit/discussions"
