[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyslicekit"
version = "0.1.1"
description = "A library for discovering underperforming segments in machine learning models."
readme = "README.md"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "scipy",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/AnshumanTiwari2006/PySliceKit"
Documentation = "https://AnshumanTiwari2006.github.io/PySliceKit"
Repository = "https://github.com/AnshumanTiwari2006/PySliceKit.git"
Issues = "https://github.com/AnshumanTiwari2006/PySliceKit/issues"
Changelog = "https://github.com/AnshumanTiwari2006/PySliceKit/blob/main/CHANGELOG.md"
"Discussion Board" = "https://github.com/AnshumanTiwari2006/PySliceKit/discussions"
